# EffectiveBorromeanWorm

./: .gitignore  CMakeLists.txt  CMakePresets.json  Plots.ipynb  README.md  conanfile.txt  launch_sim_alpha.py  plot_thermalization.py  sampling.py  settings.h5  sim_params.py
bisection/: batch.py  bisection.json  test.py  test_batch.py
cmake/conan/: conan_provider.cmake  conan_provider.cmake.backup
examples/: CMakeLists.txt
find_constant_curve/: batch.py  bisection.json  bisection.py  plot_bisection_result.py  test.py  test_batch.py  test_open.py  test_plot_3d.py
include/: cli.h  exceptions.h  io.h  log.h  rnd.h  settings.h  sim.h  state.h  uint128.h
plot_notebooks/: Plots.ipynb
source/: cli.cpp  io.cpp  log.cpp  main.cpp  rnd.cpp  sim.cpp  state.cpp
source/old_c_code/: files.c  files.h  init.c  init.h  pcg_basic.c  save.c  save.h  simulation.c  simulation.h  types.h  update.c  update.h  worm.c
